--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
 	bottom: 0;
 	color: #FFFFFF;
 	font-family: 'Helvetica','arial';
-	left: 0;
+	left: -10;
+	bottom: -5px;
 	margin: 10px;
 	padding: 4px 6px;
 	position: absolute;
